# mobileApp

./: CMakeLists.txt  gui.cpp  gui.h  main.cpp  mainwindow.ui  product.cpp  product.h  repository.cpp  repository.h  services.cpp  services.h  tst_product.cpp  tst_repository.cpp  tst_services.cpp  tst_undo.cpp  tst_validator.cpp  undo.h  validator.cpp  validator.h
